--- a/themes/legacy-team/pages/index.htm
+++ b/themes/legacy-team/pages/index.htm
@@ -5,6 +5,7 @@ layout = "default"
 description = "Welcome to the vanilla theme for October CMS!"
 hidden = "0"
 [createResult]
+[redirectToMain]
 ==
 <div class="row">
     <div class="col-sm-6 col-md-4">
